# purgr

./: .gitignore  README.md  latest.json  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: disk.rs  icons.rs  lib.rs  registry.rs
src/components/: AppRow.tsx  DiskAnalysis.tsx  Settings.tsx  SortHeader.tsx  Titlebar.tsx  Toolbar.tsx  Treemap.tsx
src/hooks/: useAppIcon.ts  useApps.ts  useDiskScan.ts  useI18n.tsx  useUpdater.ts
src/locales/: en.json  fr.json
